--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Glegoo:wght@400;700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Share+Tech+Mono&family=Tomorrow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import "tailwindcss";
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  background: var(--background);
-  color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+@theme {
+  --font-header: "Tomorrow", sans-serif;
+  --font-text: "Glegoo", serif;
+  --color-secondary: black;
+  --color-primary: oklch(98.5% 0.002 247.839)
 }
